fix z-index of dropdown-menu and some mistake

--- a/style.css
+++ b/style.css
@@ -220,9 +220,10 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  width: 286px;
+  width: 287px;
   background-color: #2c71b8;
   top: 75px;
+  z-index: 9;
 }
 
 .dropdown {
@@ -241,13 +242,15 @@ body {
   padding-left: 30px;
   padding-top: 15px;
   padding-bottom: 30px;
-  width: 288px;
+  width: 287px;
+  border: none;
 }
 
 .dropdown-content a:hover {
   background-color: white;
   color: #2c71b8;
 }
+
 
 .dropdown:hover .dropbtn {
   background-color: #2c71b8;
